unpackaged/main/default/objects/nbavs__PhoneNumber__c/nbavs__PhoneNumber__c.object-meta.xml
<CustomObject>
    <label>Phone Number</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Phone Numbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>