unpackaged/main/default/objects/nbavs__PhoneNumber__c/fields/nbavs__Area__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Area__c</fullName>
    <label>Area</label>
    <length>50</length>
    <type>Text</type>
</CustomField>