unpackaged/main/default/objects/nbavs__PhoneNumber__c/fields/nbavs__AreaCode__c.field-meta.xml
<CustomField>
    <fullName>nbavs__AreaCode__c</fullName>
    <label>Area Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>