unpackaged/main/default/objects/nbavs__PhoneNumber__c/fields/nbavs__Country__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Country__c</fullName>
    <label>Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>