unpackaged/main/default/objects/nbavs__PhoneNumber__c/fields/nbavs__CountryCode__c.field-meta.xml
<CustomField>
    <fullName>nbavs__CountryCode__c</fullName>
    <label>Country Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>