unpackaged/main/default/objects/nbavs__PhoneNumber__c/fields/nbavs__DDI_Number__c.field-meta.xml
<CustomField>
    <fullName>nbavs__DDI_Number__c</fullName>
    <formula>IF( nbavs__User__c != Null, True, False)</formula>
    <label>DDI Number</label>
    <type>Checkbox</type>
</CustomField>