unpackaged/main/default/objects/nbavs__PhoneNumber__c/fields/nbavs__Geographic__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Geographic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Geographic</label>
    <type>Checkbox</type>
</CustomField>