unpackaged/main/default/objects/nbavs__PhoneNumber__c/fields/nbavs__Local_Presence_Enabled__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Local_Presence_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Local Presence Enabled</label>
    <type>Checkbox</type>
</CustomField>