unpackaged/main/default/objects/nbavs__PhoneNumber__c/fields/nbavs__LocalNumber__c.field-meta.xml
<CustomField>
    <fullName>nbavs__LocalNumber__c</fullName>
    <label>Local Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>