unpackaged/main/default/objects/nbavs__PhoneNumber__c/fields/nbavs__Number__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Number__c</fullName>
    <label>Number</label>
    <type>Phone</type>
</CustomField>