unpackaged/main/default/objects/nbavs__PhoneNumber__c/fields/nbavs__SyncUserId__c.field-meta.xml
<CustomField>
    <fullName>nbavs__SyncUserId__c</fullName>
    <label>Sync UserId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>