unpackaged/main/default/objects/nbavs__PhoneNumber__c/fields/nbavs__User__c.field-meta.xml
<CustomField>
    <fullName>nbavs__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Natterbox User</label>
    <referenceTo>nbavs__User__c</referenceTo>
    <relationshipLabel>Phone Numbers</relationshipLabel>
    <relationshipName>Phone_Numbers</relationshipName>
    <type>Lookup</type>
</CustomField>