unpackaged/main/default/objects/nbavs__PhoneNumber__c/fields/nbavs__UserId__c.field-meta.xml
<CustomField>
    <fullName>nbavs__UserId__c</fullName>
    <formula>nbavs__User__r.nbavs__Id__c</formula>
    <label>UserId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>