unpackaged/main/default/objects/nbavs__PhoneNumber__c/listViews/nbavs__All.listView-meta.xml
<ListView>
    <fullName>nbavs__All</fullName>
    <columns>NAME</columns>
    <columns>nbavs__User__c</columns>
    <columns>nbavs__Number__c</columns>
    <columns>nbavs__AreaCode__c</columns>
    <columns>nbavs__CountryCode__c</columns>
    <columns>nbavs__Geographic__c</columns>
    <columns>nbavs__LocalNumber__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>