unpackaged/main/default/objects/nbavs__PhoneNumber__c/listViews/nbavs__US_Numbers.listView-meta.xml
<ListView>
    <fullName>nbavs__US_Numbers</fullName>
    <columns>NAME</columns>
    <columns>nbavs__AreaCode__c</columns>
    <columns>nbavs__CountryCode__c</columns>
    <columns>nbavs__Geographic__c</columns>
    <columns>nbavs__LocalNumber__c</columns>
    <columns>nbavs__Number__c</columns>
    <columns>nbavs__User__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>nbavs__CountryCode__c</field>
        <operation>equals</operation>
        <value>01</value>
    </filters>
    <label>US Numbers</label>
</ListView>